# flow5-optimization-tools

./: .gitignore  AGENTS.md  CLAUDE.md  FOIL_OPTIMIZATION_PLAN.md  GEMINI.md  README.md  build-windows.bat  deploy-windows.bat  run_flow5.sh
.beads/: issues.jsonl
.claude/: settings.json
.claude/agents/: build-validator.md  ci-watcher.md  code-reviewer.md  debugger.md  test-analyzer.md
.claude/commands/: analyze-crash.md  build-test.md  build.md  ci-check.md  commit-with-tests.md  debug.md  lint.md  session-start.md  test.md
.claude/skills/foil-validate/: SKILL.md
.claude/skills/new-api-test/: SKILL.md  scaffold.sh
.claude/skills/new-api-test/template/: CMakeLists.txt  run_test.sh  test.cpp
.github/workflows/: build-occt-dep.yml  build-windows.yml
API_examples/: flow5_test.cmake  run_all_tests.sh
API_examples/analysis3d_test/: CMakeLists.txt  analysis3d_test.cpp  run_test.sh
API_examples/constraint_test/: CMakeLists.txt  constraint_test.cpp  run_test.sh
API_examples/foiloptimize/: CMakeLists.txt  foiloptimize.cpp  run_test.sh
API_examples/geometry_test/: CMakeLists.txt  geometry_test.cpp  run_test.sh
API_examples/induced_aoa_test/: CMakeLists.txt  induced_aoa_test.cpp  run_test.sh
API_examples/le_bounds_test/: CMakeLists.txt  le_bounds_test.cpp  test_run
API_examples/xfoilrun/: CMakeLists.txt  run_test.sh  xfoilrun.cpp
XFoil-lib/: xfoil.cpp  xfoil.h
docs/: cheatsheet.md  flow5_bridge_spec.md  flow5_ux_workflow.md  lessons-learned.md  mode_b_spec.md  possible_architectural_change.md
fl5-app/: fl5-app.pro
fl5-app/globals/: creditsdlg.cpp  main.cpp  mainframe.cpp
fl5-app/interfaces/: interfaces.pri
fl5-app/interfaces/editors/boatedit/: boatdlg.cpp  saildlg.cpp  saildlg.h  sailoccdlg.cpp  sailoccdlg.h  thinsaildlg.cpp
fl5-app/interfaces/editors/foiledit/: foilwt.cpp  foilwt.h
fl5-app/interfaces/editors/fuseedit/: fusedlg.cpp  fusemesherdlg.cpp  fusemesherdlg.h  fuseoccdlg.cpp  fuseoccdlg.h
fl5-app/interfaces/editors/planeedit/: planexfldlg.cpp  planexfldlg.h
fl5-app/interfaces/mesh/: gmesh_globals.h  gmesherwt.cpp  mesh.pri  tesscontrolsdlg.cpp  tesscontrolsdlg.h
fl5-app/interfaces/opengl/fl5views/: gl3dshapeview.cpp
fl5-app/interfaces/opengl/views/: gl3dview.cpp
fl5-app/interfaces/optim/: inducedaoaadapter.cpp  inducedaoaadapter.h  optim.pri  optimfoildlg.cpp  optimfoildlg.h  optimizationpanel.cpp  optimizationpanel.h  psotask.cpp  psotask.h  psotaskfoil.cpp  psotaskfoil.h
fl5-app/interfaces/script/: xflscriptexec.cpp
fl5-app/interfaces/tools/: beamcalcdlg.cpp  beamcalcdlg.h  cavitationcalcdlg.cpp  cavitationcalcdlg.h  fluidcalcdlg.cpp  fluidcalcdlg.h  tools.pri
fl5-app/interfaces/view2d/: paint2d.cpp  paint2d.h
fl5-app/modules/: xobjects.cpp
fl5-app/modules/xdirect/: xdirect.cpp  xdirect.h
fl5-app/modules/xdirect/analysis/: xfoilanalysisdlg.cpp
fl5-app/modules/xdirect/menus/: xdirectactions.cpp  xdirectactions.h  xdirectmenus.cpp
fl5-app/modules/xplane/: xplane.cpp
fl5-lib/: fl5-lib.pro
fl5-lib/api/: bspline.h  cubicspline.h  flow5events.h  foil.h  lapack_config.h
fl5-lib/geom/geom2d/splines/: bspline.cpp  cubicspline.cpp
fl5-lib/math/: matrix.cpp
fl5-lib/objects2d/analysis2d/: xfoiltask.cpp
fl5-lib/objects2d/foilobjects/: foil.cpp
fl5-lib/openblas/: cblas.h  lapacke.h
scripts/: build_fl5app_only.bat  build_fl5lib_clean.bat  build_fl5lib_test.bat  build_fl5lib_win.bat  lint_headers.sh  test_cl_single.bat  test_cl_single2.bat  test_moc_direct.bat
